# mstd

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
base/: ProcessMgr.cpp  ProcessMgr.h  base.cpp  base.vcxproj  mstd.sln  mstd.vcxproj  mstd.vcxproj.filters
mstd/: base64.cpp  base64.h  bytebuffer.h  crc32.cpp  crc32.h  crc32_sse.cpp  datetime.cpp  datetime.h  file.cpp  file.h  fileutils.cpp  fileutils.h  hex.cpp  hex.h  ipstring.cpp  ipstring.h  log.cpp  log.h  md5.cpp  md5.h  md5util.cpp  md5util.h  path_string.cpp  path_string.h  platform.cpp  platform.h  serialize.h  singleton.h  string.cpp  string.h  string_convert.cpp  string_convert.h  system.cpp  system.h  threadalive.cpp  threadalive.h  threadmgr.h  threadmgrbase.cpp  threadmgrbase.h  threadpool.h
stdxx/: base64.cpp  base64.h  copyable.h  crashhandler.cpp  crashhandler.h  crc32c.cpp  crc32c.h  datetime.cpp  datetime.h  file.cpp  file.h  filesystem.cpp  filesystem.h  filesystem_ext.h  fileutils.cpp  fileutils.h  fstream.h  hex.cpp  hex.h  ipstring.cpp  ipstring.h  log.cpp  log.h  log4z.cpp  log4z.h  nanolog.cpp  noncopyable.h  path_string.cpp  path_string.h  platform_define.h  precomp.cpp  precomp.h  rand.cpp  rand.h  shared_ptr.h  singleton.h  stdsafe.cpp  stdsafe.h  stdxxlib.h  string.cpp  (+16 more)
